--- a/SCME.MEFAViewer/MainWindow.xaml
+++ b/SCME.MEFAViewer/MainWindow.xaml
@@ -1,25 +1,28 @@
 ﻿<Window x:Class="SCME.MEFAViewer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SCME.MEFAViewer" DataContext="{Binding RelativeSource={RelativeSource Self}, Path=Vm}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="900" Background="WhiteSmoke" TextElement.FontSize="14">
+        DataContext="{Binding RelativeSource={RelativeSource Self}, Path=ViewModel}"
+        Title="MainWindow"
+        Width="900" Height="600"
+        Background="WhiteSmoke"
+        TextElement.FontSize="14">
     <Grid Margin="5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="445"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <ListView x:Name="MmeTable" ItemsSource="{Binding MmeTiles}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectedItem="{Binding SelectedMmeTile}" SelectionChanged="MmeTile_OnSelectionChanged">
+        <ListView x:Name="MmeTable" ItemsSource="{Binding MmeTiles}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectedItem="{Binding SelectedMmeTile}">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <WrapPanel  Orientation="Horizontal" />
+                    <WrapPanel  Orientation="Horizontal"  Margin="0,4"/>
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Border Width="100" Height="100" Background="{Binding Color}" BorderBrush="Aqua" BorderThickness="2">
+                    <Border Width="100" Height="100" Background="{Binding Color}" BorderBrush="Aqua" BorderThickness="2" Margin="0,2">
                         <StackPanel VerticalAlignment="Center">
                             <TextBlock Text="{Binding Name}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                             <TextBlock Text="{Binding SWVersionAtLastStart, TargetNullValue='нет данных'}" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,5,0,0"/>
@@ -95,5 +98,6 @@
                 <TextBlock Text="{Binding ActiveProfilesCount, TargetNullValue='нет данных'}" Margin="5,0,0,0"/>
             </StackPanel>
         </StackPanel>
+        <TextBlock x:Name="DbConnection" Grid.Column="1" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
