--- a/SCME.WpfControlLibrary/Resources/ValueConvertersDictionary.xaml
+++ b/SCME.WpfControlLibrary/Resources/ValueConvertersDictionary.xaml
@@ -29,6 +29,7 @@
     <Converters:BvtIdrmToVisibilityConverter x:Key="Idrm2V" />
     <Converters:BvtUdsmUrsmIrsmToVisibilityConverter x:Key="bvtUdsmUrsmIrsmToVisibilityConverter" />
     <Converters:BvtUdsmUrsmIdsmToVisibilityConverter x:Key="bvtUdsmUrsmIdsmToVisibilityConverter" />
+    <Converters:ModuleTypeConverter x:Key="ModuleTypeConverter" />
 
 
 </ResourceDictionary>
